assets/css/main.css
@tailwind base;
@tailwind components;
@tailwind utilities;

@font-face {
  font-family: 'Aldrich-Regular';
  src: url(../fonts/Aldrich-Regular.ttf);
  font-display: swap;
}

@layer base {
  * {
    @apply font-primary text-on-background;
  }

  body {
    @apply bg-background overflow-x-hidden;
  }
}

.large-title {
  @apply font-bold text-2xl text-center;
}
.medium-title {
  @apply font-bold text-xl text-center;
}
.small-title {
  @apply font-bold text-lg tracking-widest;
}

.button {
  @apply bg-primary text-center text-lg py-4 px-8 rounded-lg shadow-inner hover:bg-on-background hover:text-background transition duration-300 ease-in-out;
}

.button-secondary {
  @apply bg-secondary text-center text-lg py-4 px-8 rounded-lg shadow-inner hover:bg-on-background hover:text-background transition duration-300 ease-in-out;
}

.button:disabled, .button-secondary:disabled {
  @apply bg-secondary hover:bg-secondary;
}

.text-input {
  @apply bg-on-background text-background rounded-lg px-4 py-2 w-full focus:outline-none focus:ring-2 focus:ring-primary transition duration-300 ease-in-out;
}

